# octocurl2

./: .gitignore  README.md  meson.build
src/: curlwrap.cpp  curlwrap.hpp  default_params.hpp  download_task.cpp  download_task.hpp  filename.cpp  filename.hpp  octocurl2.cpp  octocurl2.hpp
test/: Makefile  curldownloadtest.cpp  defaultnametest.cpp
